--- a/package.json
+++ b/package.json
@@ -11,22 +11,19 @@
     "postinstall": "bower install --allow-root"
   },
   "dependencies": {
-    "async": "^1.3.0",
+    "async": "^2.0.0-rc.6",
     "body-parser": "^1.13.1",
-    "bower": "~1.4.1",
+    "bower": "~1.7.9",
     "cfenv": "^1.0.0",
     "express": "^4.12.3",
     "moment": "^2.10.3",
     "nano": "^6.1.5",
-    "swagger-express-mw": "^0.0.4",
+    "swagger-express-mw": "^0.6.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "should": "^5.2.0",
-    "supertest": "^0.15.0"
-  },
-  "engines": {
-    "node": "0.12.*"
+    "should": "^9.0.2",
+    "supertest": "^1.2.0"
   },
   "repository": {}
 }
