--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.12.3",
     "moment": "^2.10.3",
     "nano": "^6.1.5",
+    "newrelic": "^1.32.0",
     "swagger-express-mw": "^0.6.0",
     "underscore": "^1.8.3"
   },
