--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,19 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "/public/vendor/",
+    "public/vendor/",
     "test",
     "tests"
   ],
   "dependencies": {
-    "swagger-ui": "~2.1.0",
-    "bootstrap": "~3.3.5"
+    "angular": "^1.5.8",
+    "angular-material": "^1.1.1",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-messages": "^1.5.8",
+    "angular-ui-router": "^0.3.2",
+    "angular-css": "^1.0.8",
+    "moment": "^2.16.0",
+    "postal.js": "postal#^2.0.4"
   }
 }
